infra/terraform/modules/networking/vpc.tf
resource "aws_vpc" "this" {
  cidr_block           = var.vpc_settings.cidr_block
  enable_dns_hostnames = var.vpc_settings.enable_dns_hostnames
  enable_dns_support   = var.vpc_settings.enable_dns_support

  tags = {
    Name = "${var.project_settings.project_name}-vpc"
  }
}
